--- a/Notebooks/Data_Engineering_Notebook_Colab.ipynb
+++ b/Notebooks/Data_Engineering_Notebook_Colab.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/SergeyShchus/Data-analysis-Notebooks/blob/main/Notebooks/Data_Engineering_Notebook_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "M7fH8htoLlL5"
       },
       "source": [
@@ -13890,8 +13880,7 @@
       "version": "3"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
