Создано с помощью Colaboratory

--- a/Notebooks/Data_Engineering_Notebook_Colab.ipynb
+++ b/Notebooks/Data_Engineering_Notebook_Colab.ipynb
@@ -3,6 +3,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SergeyShchus/Data-analysis-Notebooks/blob/main/Notebooks/Data_Engineering_Notebook_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WLif4-no2eUt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "M7fH8htoLlL5"
       },
       "source": [
@@ -1965,9 +1984,7 @@
         "2. Sum each candidate's votes for every mode in each county, for each election year\n",
         "3. Lock some fields in place, and then pivot the table using the party field.\n",
         "4. Reformat the pivoted table.\n",
-        "\n",
-        "The following code cell performs these steps.\n",
-        "![reformat_table.gif](attachment:reformat_table.gif)"
+        "\n"
       ]
     },
     {
@@ -13880,7 +13897,8 @@
       "version": "3"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
